# gauss

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
gauss/: __init__.py  gauss.py  gmm_compress.py
src/gauss/: __init__.py  codec.py  compress.py  format.py  gmm.py
